<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>handeye_4dof_ros</name>
  <version>0.0.0</version>
  <description>Handeye calibration for 4DOF manipulators using dual quaternions using ROS 2.</description>
  <maintainer email="TODO@TODO.com">TODO</maintainer>
  <license>MIT</license>

  <!-- ROS built-in dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_py</exec_depend>

  <!-- Third-party ROS dependencies -->

  <!-- First-party ROS dependencies -->

  <!-- Other dependencies -->
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-scipy</exec_depend>
  <exec_depend>python3-sympy</exec_depend>

  <!-- Test dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
